force-app/main/default/objects/PaymentStatus__c/PaymentStatus__c.object-meta.xml
<CustomObject>
    <label>PaymentStatus</label>
    <nameField>
        <label>Payment status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PaymentStatus</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>