force-app/main/default/objects/PaymentStatus__c/fields/AI_Recommended_Action__c.field-meta.xml
<CustomField>
    <fullName>AI_Recommended_Action__c</fullName>
    <description>VIBA AI에서 권장하는 다음 액션</description>
    <label>AI Recommended Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>