force-app/main/default/objects/PaymentStatus__c/fields/AI_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>AI_Risk_Score__c</fullName>
    <defaultValue>0</defaultValue>
    <description>VIBA AI에서 계산한 위험도 점수 (0-100)</description>
    <label>AI Risk Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>