force-app/main/default/objects/PaymentStatus__c/fields/Next_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Contact_Date__c</fullName>
    <description>다음 연락 예정일</description>
    <label>Next Contact Date</label>
    <type>Date</type>
</CustomField>