force-app/main/default/objects/PaymentStatus__c/fields/PaidDate__c.field-meta.xml
<CustomField>
    <fullName>PaidDate__c</fullName>
    <description>실제 납부 완료 일자</description>
    <label>PaidDate</label>
    <type>Date</type>
</CustomField>