force-app/main/default/objects/PaymentStatus__c/fields/Recommended_Action__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Action__c</fullName>
    <description>권장하는 액션</description>
    <label>Recommended Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>